concurrent writes general